fix => formatting issues fix => adding more comments fix => migration commands has been fixed
